Fix Spacing for 13 inch

--- a/src/app/job-details/job-details.component.scss
+++ b/src/app/job-details/job-details.component.scss
@@ -4,8 +4,8 @@
   max-height: calc(100vh - 55px);
   height: calc(100vh - 55px);
   .job-container {
-    margin: 0% 6%;
-    padding: 4%;
+    margin: 0% 3%;
+    padding: 3%;
     background-color: #ffffff;
     &.safari-scroll {
       height: 100%;
